@@ -1,3 +1,11 @@
+2008-10-26  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-scan.c:
+	* src/baobab-scan.h:
+	* src/baobab-utils.c: (baobab_check_dir), (is_virtual_filesystem):
+	* src/baobab-utils.h:
+	Fixes #557226: scanning /sys folder
+
 2008-10-04  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-treeview.c: 
